--- a/app/src/main/res/layout/fragment_discover.xml
+++ b/app/src/main/res/layout/fragment_discover.xml
@@ -34,7 +34,8 @@
         android:layout_marginEnd="15dp"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="15dp"
-        card_view:cardCornerRadius="4dp">
+        card_view:cardCornerRadius="4dp"
+        card_view:cardBackgroundColor="@color/colorGrayCardBackground">
 
 
         <androidx.viewpager.widget.ViewPager
@@ -49,5 +50,45 @@
             android:paddingRight="@dimen/card_padding"
             android:paddingStart="@dimen/card_padding" />
     </androidx.cardview.widget.CardView>
+
+    <TextView
+        style="@style/TextAppearance.AppCompat.Title"
+        android:id="@+id/info_text_top_rated"
+        android:layout_below="@+id/card_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/top_rated"
+        android:textSize="25dp"
+        android:textStyle="bold"
+        android:textColor="@color/colorBlack"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="5dp"/>
+
+    <androidx.cardview.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view_top_rated"
+        android:layout_below="@+id/info_text_top_rated"
+        android:layout_gravity="top"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        card_view:cardCornerRadius="4dp"
+        card_view:cardBackgroundColor="@color/colorGrayCardBackground">
+
+        <androidx.recyclerview.widget.RecyclerView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/top_rated_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"/>
+    </androidx.cardview.widget.CardView>
+
+
 
 </RelativeLayout>
