--- a/app/src/main/res/layout/fragment_discover.xml
+++ b/app/src/main/res/layout/fragment_discover.xml
@@ -11,22 +11,45 @@
         android:layout_height="wrap_content"
         android:text="vergggggga" /-->
 
-    <TextView
-        style="@style/TextAppearance.AppCompat.Title"
-        android:id="@+id/info_text"
+    <LinearLayout
+        android:orientation="horizontal"
+        android:id="@+id/linear"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/last_added"
-        android:textSize="25dp"
-        android:textStyle="bold"
-        android:textColor="@color/colorBlack"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="5dp"/>
+        android:layout_height="wrap_content">
+
+        <TextView
+            style="@style/TextAppearance.AppCompat.Title"
+            android:id="@+id/info_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/last_added"
+            android:textSize="25dp"
+            android:textStyle="bold"
+            android:textColor="@color/colorBlack"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="5dp"/>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="right">
+
+
+            <ImageView
+                android:id="@+id/search_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:foregroundGravity="right"
+                android:src="@drawable/ic_search_button" />
+        </LinearLayout>
+    </LinearLayout>
 
     <androidx.cardview.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
-        android:layout_below="@+id/info_text"
+        android:layout_below="@+id/linear"
         android:layout_gravity="top"
         android:layout_width="match_parent"
         android:layout_height="250dp"
