--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,8 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#5BE356</color>
+    <color name="colorBlank">#FFFFFF</color>
+    <color name="colorMark">#5BE356</color>
+    <color name="colorBlack">#000</color>
 </resources>
