Search fragment & Books horizontal list implemented

--- a/app/src/main/res/layout/fragment_discover.xml
+++ b/app/src/main/res/layout/fragment_discover.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/fragment_discover"
     tools:context=".Discover.DiscoverFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -33,11 +34,12 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:id="@+id/linearLayout"
             android:gravity="right">
 
 
             <ImageView
-                android:id="@+id/search_button"
+                android:id="@+id/searchIcon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
