--- a/app/src/main/res/layout/book_list_item.xml
+++ b/app/src/main/res/layout/book_list_item.xml
@@ -41,7 +41,6 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:padding="5dp"
-                    android:text="Book Title"
                     android:textSize="18sp" />
 
                 <TextView
@@ -50,8 +49,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="15sp"
-                    android:padding="5dp"
-                    android:text="Marcel Bufalo"/>
+                    android:padding="5dp" />
             </LinearLayout>
 
             <LinearLayout
