--- a/app/src/main/res/layout/fragment_search_book.xml
+++ b/app/src/main/res/layout/fragment_search_book.xml
@@ -4,27 +4,53 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".SearchBookFragment">
+    tools:context=".SearchBookFragment"
+    tools:actionBarNavMode="standard"
+    android:backgroundTint="@color/colorPrimaryDark">
 
-    <!-- TODO: Update blank fragment layout -->
-    <SearchView
-        android:id="@+id/search_bar"
-        android:layout_width="match_parent"
-        android:iconifiedByDefault="false"
-        android:queryHint="@string/search_bar"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/books_recycler_view"
+    <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"/>
+        android:background="@color/colorPrimaryDark">
+
+        <ImageView
+            android:id="@+id/go_back_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:src="@drawable/ic_go_back_button"/>
+
+
+    </androidx.appcompat.widget.Toolbar>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:backgroundTint="@color/cardview_light_background">
+
+        <SearchView
+            android:id="@+id/search_bar"
+            android:layout_width="match_parent"
+            android:iconifiedByDefault="false"
+            android:queryHint="@string/search_bar"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/books_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"/>
+
+    </LinearLayout>
+
 
 </LinearLayout>
