--- a/app/src/main/res/layout/fragment_search_book.xml
+++ b/app/src/main/res/layout/fragment_search_book.xml
@@ -8,7 +8,7 @@
     tools:actionBarNavMode="standard"
     android:backgroundTint="@color/colorPrimaryDark">
 
-    <androidx.appcompat.widget.Toolbar
+    <!--androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimaryDark">
@@ -22,7 +22,7 @@
             android:src="@drawable/ic_go_back_button"/>
 
 
-    </androidx.appcompat.widget.Toolbar>
+    </androidx.appcompat.widget.Toolbar-->
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,16 +30,33 @@
         android:orientation="vertical"
         android:backgroundTint="@color/cardview_light_background">
 
-        <SearchView
-            android:id="@+id/search_bar"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:iconifiedByDefault="false"
-            android:queryHint="@string/search_bar"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"/>
+            android:orientation="horizontal"
+            android:backgroundTint="@color/cardview_light_background">
+
+            <ImageView
+                android:id="@+id/go_back_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_go_back_button"/>
+
+            <SearchView
+                android:id="@+id/search_bar"
+                android:layout_width="match_parent"
+                android:iconifiedByDefault="false"
+                android:queryHint="@string/search_bar"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"/>
+
+        </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/books_recycler_view"
