--- a/app/src/main/res/layout/horizontal_book_recycler_view.xml
+++ b/app/src/main/res/layout/horizontal_book_recycler_view.xml
@@ -9,12 +9,31 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-    <View
+    <LinearLayout
+        android:backgroundTint="@color/cardview_light_background"
+        android:id="@+id/coverView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:gravity="center_horizontal|center_vertical"
+        android:visibility="invisible">
+
+        <TextView
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:gravity="center_horizontal|center_vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/discover_link"
+            android:textColor="@color/colorBlueLink"/>
+
+    </LinearLayout>
+
+    <!--<View
         android:id="@+id/coverView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/cardview_light_background"
-        android:visibility="invisible"/>
+        android:visibility="invisible"/>-->
 
     <!--TextView
         android:id="@+id/tvAnimalName"
