--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#D81B60</color>
     <color name="colorBlack">#000000</color>
     <color name="colorGrayCardBackground">#e0e0e0</color>
+    <color name="colorBlueLink">#037bfc</color>
 
 </resources>
