--- a/app/src/main/res/layout/fragment_book_view.xml
+++ b/app/src/main/res/layout/fragment_book_view.xml
@@ -113,14 +113,14 @@
                         android:layout_height="75dp"
                         android:layout_marginTop="5dp"
                         android:layout_marginBottom="5dp"
-                        android:gravity="center"
-                        android:layout_gravity="center_horizontal|center_vertical">
+                        android:gravity="center_horizontal">
 
                         <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
                             android:orientation="horizontal"
-                            android:layout_gravity="center_horizontal">
+                            android:gravity="center_horizontal"
+                            >
 
                             <LinearLayout
                                 android:layout_width="wrap_content"
@@ -172,7 +172,6 @@
                                 android:orientation="vertical"
                                 android:layout_marginEnd="5dp"
                                 android:layout_marginStart="5dp"
-                                android:layout_gravity="center_horizontal"
                                 android:gravity="center_horizontal">
 
                                 <TextView
@@ -244,12 +243,7 @@
                                     android:textSize="22dp"
                                     android:layout_gravity="center_horizontal"
                                     android:gravity="center_horizontal"/>
-                                <!--<ImageView
-                                    android:layout_width="30dp"
-                                    android:layout_height="30dp"
-                                    android:src="@drawable/mystery"
-                                    android:layout_gravity="center_horizontal"
-                                    android:gravity="center_horizontal"/>-->
+
 
 
                                 <TextView
