--- a/app/src/main/res/layout/fragment_book_view.xml
+++ b/app/src/main/res/layout/fragment_book_view.xml
@@ -268,6 +268,16 @@
                         android:layout_height="1dp"
                         android:background="@color/colorBlack"/>
 
+                    <TextView
+                        android:id="@+id/same_author_books_title"
+                        style="@style/TextAppearance.AppCompat.Title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="start"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="5dp"
+                        android:text="@string/more_books_of" />
+
                     <androidx.cardview.widget.CardView
                         xmlns:card_view="http://schemas.android.com/apk/res-auto"
                         android:id="@+id/card_view_author_rated"
@@ -292,6 +302,16 @@
                             android:layout_marginEnd="5dp"/>
                     </androidx.cardview.widget.CardView>
 
+                    <TextView
+                        android:id="@+id/same_genre_books_title"
+                        style="@style/TextAppearance.AppCompat.Title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="start"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="5dp"
+                        android:text="@string/more_books_genre" />
+
                     <androidx.cardview.widget.CardView
                         xmlns:card_view="http://schemas.android.com/apk/res-auto"
                         android:id="@+id/card_view_gender"
@@ -315,6 +335,11 @@
                             android:layout_marginStart="5dp"
                             android:layout_marginEnd="5dp"/>
                     </androidx.cardview.widget.CardView>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="25dp"
+                        android:orientation="horizontal"/>
 
                 </LinearLayout>
 
