--- a/app/src/main/res/layout/horizontal_book_recycler_view.xml
+++ b/app/src/main/res/layout/horizontal_book_recycler_view.xml
@@ -1,13 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="120dp"
-    android:layout_height="150dp">
+    android:layout_height="200dp"
+    android:layout_marginTop="5dp"
+    android:layout_marginEnd="10dp">
 
-    <ImageView
-        android:id="@+id/coverImageView"
+    <RelativeLayout
+        android:id="@+id/relative_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"
+        >
+
+        <RelativeLayout
+            android:id="@+id/image_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/lib1"/>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/add_button"
+            android:layout_alignParentEnd="true"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/ic_add_book"
+            android:scaleType="center"
+            />
+
+        <!--<com.rey.material.widget.FloatingActionButton
+            android:id="@+id/add_button"
+            android:layout_alignParentEnd="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_radius="15dp"
+            app:fab_iconSrc="@drawable/ic_add_book"
+            />-->
+        <!-- app:fab_animDuration="@android:integer/config_mediumAnimTime"
+            app:fab_interpolator="@android:anim/decelerate_interpolator"-->
+
+        <!--<ImageView
+            android:layout_marginTop="10dp"
+            android:id="@+id/coverImageView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/lib1"/>-->
+    </RelativeLayout>
 
     <LinearLayout
         android:backgroundTint="@color/cardview_light_background"
