--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorBlank">#FFFFFF</color>
     <color name="colorMark">#5BE356</color>
     <color name="colorBlack">#000</color>
+    <color name="colorGrayCardBackground">#e0e0e0</color>
 </resources>
