--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,8 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorBlack">#000000</color>
-    <color name="colorGrayCardBackground">#e0e0e0</color>
+    <color name="colorGrayCardBackground">#f5f5f5</color>
     <color name="colorBlueLink">#037bfc</color>
+    <color name="colorAddedGreen">#00ffa2</color>
 
 </resources>
