Books page navigation completed

--- a/app/src/main/res/layout/fragment_book_view.xml
+++ b/app/src/main/res/layout/fragment_book_view.xml
@@ -27,6 +27,7 @@
     </LinearLayout>
 
     <ScrollView
+        android:id="@+id/scroll_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -267,6 +268,50 @@
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:background="@color/colorBlack"/>
+
+                    <TextView
+                        android:id="@+id/summaryTextView"
+                        style="@style/TextAppearance.AppCompat.Title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="start"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="5dp"
+                        android:text="@string/summary" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:layout_gravity="end">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="4.4"
+                                android:textStyle="bold"
+                                android:textColor="@color/colorBlack"/>
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="/5"
+                                android:textColor="@color/colorBlack"/>
+
+                        </LinearLayout>
+
+
+                        <me.biubiubiu.justifytext.library.JustifyTextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="end"
+                            android:text="@string/book_summary_text"/>
+                    </LinearLayout>
 
                     <TextView
                         android:id="@+id/same_author_books_title"
