Swipe list options added

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="colorGrayCardBackground">#f5f5f5</color>
     <color name="colorBlueLink">#037bfc</color>
     <color name="colorAddedGreen">#00ffa2</color>
+    <color name="colorYellowSwipe">#d9c01c</color>
 </resources>
