--- a/app/src/main/res/layout/cardview_template.xml
+++ b/app/src/main/res/layout/cardview_template.xml
@@ -10,7 +10,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
-        android:background="@android:color/white"
+        android:background="@color/colorGrayCardBackground"
         android:id="@+id/LayoutBackgroundCardView"
         android:layout_height="match_parent"
         android:layout_width="match_parent">
